chore:connect to cloud mongo db

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,10 @@
 PORT=3000
+
+
+# Database
+
+DB=mongodb+srv://<username>:<password>@cluster0.cqn1jxh.mongodb.net/<dbname>?retryWrites=true&w=majority&appName=Cluster0
+DB_USERNAME=zedan
+DB_PASSWORD=atom123456
+DB_NAME=atom_db
+
