chore:configure jwt & security

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
+NODE_ENV=development
+
+# Server
 PORT=3000
 
 
@@ -7,4 +10,9 @@ DB=mongodb+srv://<username>:<password>@cluster0.cqn1jxh.mongodb.net/<dbname>?ret
 DB_USERNAME=zedan
 DB_PASSWORD=atom123456
 DB_NAME=atom_db
+
+# JWT
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+JWT_SECRET=atom_secret_key_for_jwt
 
