chore:finish basics to make server function

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,7 @@ JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 JWT_SECRET=atom_secret_key_for_jwt
 
+# Email
+# TODO: add email configuration
+SENDGRID_USERNAME=
+SENDGRID_PASSWORD=
