--- a/backend/.env
+++ b/backend/.env
@@ -20,3 +20,8 @@ JWT_SECRET=atom_secret_key_for_jwt
 # TODO: add email configuration
 SENDGRID_USERNAME=
 SENDGRID_PASSWORD=
+EMAIL_FROM=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
