--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,13 @@
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "pug": "^3.0.2",
     "slugify": "^1.6.6",
     "xss-clean": "^0.1.4"
   },
